--- a/first-pelican-post.html
+++ b/first-pelican-post.html
@@ -17,8 +17,6 @@
   <link href="https://christiano.dev/" rel="canonical" />
 
   <!-- Feed -->
-        <link href="https://christiano.dev/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Christiano Anderson Full Atom Feed" />
-          <link href="https://christiano.dev/feeds/{slug}.atom.xml" type="application/atom+xml" rel="alternate" title="Christiano Anderson Categories Atom Feed" />
 
   <link href="https://christiano.dev/theme/css/style.css" type="text/css" rel="stylesheet" />
 
@@ -64,6 +62,14 @@
 <meta property="og:image" content="https://christiano.dev/theme/images/post-bg.jpg">
 
 <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@dump">
+    <meta name="twitter:title" content="First Pelican post">
+    <meta name="twitter:url" content="https://christiano.dev/first-pelican-post.html">
+
+        <meta name="twitter:image:src" content="https://christiano.dev/theme/images/post-bg.jpg">
+
+      <meta name="twitter:description" content="Moving my main blog to Pelican just to get more hack.">
 
 <script type="application/ld+json">
 {
