Updating the old domain to the new one

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					<li><a href="https://twitter.com/dump" class="icon brands fa-twitter">Twitter</a></li>
 					<li><a href="https://www.linkedin.com/in/christianoanderson/" class="icon brands fa-linkedin">Linkedin</a></li>
 					<li><a href="https://github.com/christiano" class="icon brands fa-github">Github</a></li>
-					<li><a href="https://christiano.me" class="icon brands fa-wordpress">Blog</a></li>
+					<li><a href="https://br.christiano.dev" class="icon brands fa-wordpress">Blog</a></li>
 					<li><a href="https://www.slideshare.net/canderson" class="icon brands fa-slideshare">Slideshare</a></li>
-					<li><a href="https://christiano.me/contact-en/" class="icon fa-envelope">Contact</a></li>
+					<li><a href="https://br.christiano.dev/contact-en/" class="icon fa-envelope">Contact</a></li>
 				</ul>
 			</footer>
 		</section>
