Updated index information

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<header>
 				<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 				<h1>Christiano Anderson</h1>
-				<p>Data Engineer, Data Architect, Cloud (AWS, Google), Python, Julia, Free Software</p>
+				<p>Data Engineer, Python, Scala, Spark, AWS, Google Cloud</p>
 			</header>
 			<footer>
 				<ul class="icons">
